# VEXIS-CLI-1

./: DETAILED_GUIDE.md  LICENSE  README.md  check_environment.py  config.example.yaml  config.yaml  pyproject.toml  requirements.txt  run.py  setup.py  test_kg_command.py
Groq/: README.md
api/: README.md  __init__.py  amazon_client.py  anthropic_client.py  base.py  cohere_client.py  deepseek_client.py  google_client.py  groq_client.py  meta_client.py  microsoft_client.py  minimax_client.py  mistral_client.py  openai_client.py  together_client.py  xai_client.py  zhipuai_client.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  ERROR_HANDLING.md  OLLAMA_INTEGRATION.md  README.md  TROUBLESHOOTING.md
src/ai_agent/: __init__.py
src/ai_agent/core_processing/: five_phase_engine.py  task_completion_verifier.py  task_generator.py  terminal_history.py  two_phase_engine.py
src/ai_agent/external_integration/: model_runner.py  multi_provider_vision_client.py  openrouter_provider.py  telegram_bot.py
src/ai_agent/user_interface/: five_phase_app.py  main_app.py  two_phase_app.py
src/ai_agent/utils/: config.py  cost_manager.py  dependency_checker.py  environment_detector.py  model_definitions.py  ollama_error_handler.py  sdk_installer.py  settings_manager.py
tests/unit/: test_task_lifecycle.py  test_telegram_queue.py
