[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vexis-cli-1"
version = "1.0.0"
description = "AI command-line agent for terminal automation and task execution"
readme = "README.md"
license = "MIT"
authors = [
    {name = "AInohogosya-team"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Automation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "automation", "cli", "terminal", "command-line"]
requires-python = ">=3.8"
dependencies = [
    "Pillow>=10.0.0",
    "pyautogui>=0.9.54",
    "requests>=2.31.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pynput>=1.7.6",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "pyobjc-framework-Cocoa>=9.0; sys_platform=='darwin'",
    "pywin32>=306; sys_platform=='win32'",
    "python-xlib>=0.33; sys_platform=='linux'",
    "cryptography>=41.0.0",
    "pydantic>=2.0.0",
    "structlog>=23.0.0",
    "rich>=13.0.0",
]


[project.scripts]
"vexis-cli" = "ai_agent.user_interface.main_app:main"
"vexis-cli-enhanced" = "ai_agent.user_interface.two_phase_app:main"

[project.urls]
Homepage = "https://github.com/AInohogosya-team/VEXIS-CLI-1"
Repository = "https://github.com/AInohogosya-team/VEXIS-CLI-1"
"Bug Reports" = "https://github.com/AInohogosya-team/VEXIS-CLI-1/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_agent = [
    "config/*.yaml",
    "config/*.json", 
    "templates/*.txt",
    "scripts/*.sh",
    "scripts/*.ps1",
]
